<resources>
    <string name="app_name">Trabfinal</string>
    <string name="title_loan">Loan</string>
    <string name="title_people">People</string>
    <string name="title_historic">Historic</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_reg">REGISTER PEOPLE</string>
    <string name="btSavePeople">Save</string>
    <string name="tvname">Name:</string>
    <string name="tvdatanasc">Birth Date:</string>
    <string name="tvtel">Phone:</string>
    <string name="tvcep">CEP:</string>
    <string name="tvbairro">Neighborhood:</string>
    <string name="tvendereco">Address:</string>
    <string name="name_item">Name Item</string>
    <string name="data_devolution">Date Devolution</string>
    <string name="tvitem">Loan Data</string>
    <string name="btConfirmationLoan">Confirmation Loan</string>
    <string name="tvselect_people">Select People:</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_view_people">ViewPeople</string>
    <string name="tvDadosPeople">Lender Data</string>
</resources>
