<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.androidx.com/apk/res-auto" xmlns:app2="http://schemas.android.com/apk/res-auto"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".ui.FragmentAddPeople">


        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <EditText
                    android:layout_width="300dp"
                    android:layout_height="52dp"
                    android:inputType="textPersonName"
                    android:hint="@string/tvname"
                    android:ems="10"
                    android:id="@+id/name"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintHorizontal_bias="0.451"
                    app:layout_constraintTop_toBottomOf="@+id/txtRegisterPeople"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintVertical_bias="0.0"
                    android:layout_marginStart="24dp" app2:layout_constraintStart_toStartOf="parent"
                    android:layout_marginLeft="24dp" android:layout_marginTop="16dp"
                    app2:layout_constraintTop_toTopOf="parent"
                    app2:layout_constraintEnd_toEndOf="parent"
                    app2:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="32dp"
                    app2:layout_constraintHorizontal_bias="0.492" app2:layout_constraintVertical_bias="0.251"
                    android:layout_marginRight="24dp" android:layout_marginEnd="24dp"/>

            <EditText
                    android:layout_width="300dp"
                    android:layout_height="52dp"
                    android:hint="@string/tvdatanasc"
                    android:ems="10"
                    android:id="@+id/date_nasc"
                    android:clickable="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintHorizontal_bias="0.451"
                    app:layout_constraintTop_toBottomOf="@+id/txtRegisterPeople"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintVertical_bias="0.0"
                    android:layout_marginStart="24dp" app2:layout_constraintStart_toStartOf="parent"
                    android:layout_marginLeft="24dp"
                    app2:layout_constraintTop_toTopOf="parent"
                    app2:layout_constraintEnd_toEndOf="parent"
                    app2:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="32dp"
                    app2:layout_constraintHorizontal_bias="0.492" app2:layout_constraintVertical_bias="0.361"
                    android:layout_marginRight="24dp" android:layout_marginEnd="24dp" android:layout_marginTop="16dp"/>

            <EditText
                    android:layout_width="300dp"
                    android:layout_height="51dp"
                    android:inputType="number"
                    android:hint="@string/tvtel"
                    android:ems="10"
                    android:id="@+id/tel"
                    app:layout_constraintTop_toBottomOf="@+id/name"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintHorizontal_bias="0.451"
                    android:layout_marginStart="8dp"
                    app2:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
                    android:layout_marginEnd="8dp" app2:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginRight="8dp"
                    android:layout_marginTop="16dp" app2:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginBottom="32dp" app2:layout_constraintTop_toTopOf="parent"
                    app2:layout_constraintHorizontal_bias="0.494" app2:layout_constraintVertical_bias="0.477"/>
            <TextView
                    android:text="@string/title_reg"
                    android:layout_width="0dp"
                    android:layout_height="63dp"
                    android:textStyle="bold"
                    android:textSize="20dp"
                    android:id="@+id/txtRegisterPeople" app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.098"
                    app:layout_constraintVertical_bias="0.027" app2:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="8dp" app2:layout_constraintTop_toTopOf="parent"
                    app2:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="8dp"
                    app2:layout_constraintVertical_bias="0.098"
                    android:layout_marginRight="32dp" android:layout_marginEnd="32dp"
                    app2:layout_constraintStart_toEndOf="@+id/imageView4" android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp" app2:layout_constraintHorizontal_bias="0.0"/>

            <EditText
                    android:layout_width="300dp"
                    android:layout_height="55dp"
                    android:inputType="number"
                    android:hint="@string/tvcep"
                    android:ems="10"
                    android:id="@+id/cep"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.451"
                    app:layout_constraintTop_toBottomOf="@+id/tel"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintVertical_bias="0.0"
                    android:layout_marginStart="8dp"
                    app2:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
                    android:layout_marginEnd="8dp" app2:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginRight="8dp" android:layout_marginTop="16dp"
                    app2:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="32dp"
                    app2:layout_constraintHorizontal_bias="0.494" app2:layout_constraintVertical_bias="0.595"
                    app2:layout_constraintTop_toTopOf="parent"/>
            <EditText
                    android:layout_width="300dp"
                    android:layout_height="56dp"
                    android:inputType="textPersonName"
                    android:hint="@string/tvbairro"
                    android:ems="10"
                    android:id="@+id/bairro"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.451"
                    app:layout_constraintTop_toBottomOf="@+id/cep"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintVertical_bias="0.0"
                    android:layout_marginEnd="8dp" app2:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginRight="8dp" android:layout_marginStart="8dp"
                    app2:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
                    android:layout_marginTop="24dp" app2:layout_constraintTop_toTopOf="parent"
                    app2:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="8dp"
                    app2:layout_constraintHorizontal_bias="0.494" app2:layout_constraintVertical_bias="0.684"/>
            <EditText
                    android:layout_width="300dp"
                    android:layout_height="56dp"
                    android:inputType="textPersonName"
                    android:hint="@string/tvendereco"
                    android:ems="10"
                    android:id="@+id/endereco"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/bairro" app:layout_constraintVertical_bias="0.013"
                    app:layout_constraintHorizontal_bias="0.451"
                    app2:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginBottom="8dp" android:layout_marginEnd="8dp"
                    app2:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"
                    android:layout_marginStart="8dp" app2:layout_constraintStart_toStartOf="parent"
                    android:layout_marginLeft="8dp" android:layout_marginTop="24dp"
                    app2:layout_constraintVertical_bias="0.796" app2:layout_constraintTop_toTopOf="parent"
                    app2:layout_constraintHorizontal_bias="0.494"/>
            <Button
                    android:text="@string/btSavePeople"
                    android:layout_width="300dp"
                    android:layout_height="61dp"
                    android:background="#04B404"
                    android:textColor="#FFFFFF"
                    android:id="@+id/peopleFragment" app2:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp" app2:layout_constraintStart_toStartOf="parent"
                    android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
                    app2:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="35dp"
                    app2:layout_constraintHorizontal_bias="0.494"
                    app2:layout_constraintVertical_bias="0.905" app2:layout_constraintTop_toTopOf="parent"/>
            <ImageView
                    android:src="@android:drawable/ic_menu_month"
                    android:layout_width="46dp"
                    android:layout_height="42dp"
                    android:id="@+id/imageView" app2:layout_constraintStart_toStartOf="@+id/date_nasc"
                    app2:layout_constraintEnd_toEndOf="@+id/date_nasc"
                    app2:layout_constraintTop_toTopOf="@+id/date_nasc"
                    app2:layout_constraintBottom_toBottomOf="@+id/date_nasc"
                    app2:layout_constraintHorizontal_bias="0.972"
                    app2:layout_constraintVertical_bias="0.0"/>
            <ImageView
                    android:src="@drawable/ico_addpeople"
                    android:layout_width="0dp"
                    android:layout_height="61dp"
                    android:id="@+id/imageView4"
                    android:layout_marginBottom="8dp"
                    app2:layout_constraintBottom_toTopOf="@+id/name"
                    android:layout_marginEnd="260dp"
                    app2:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="260dp"
                    android:layout_marginStart="12dp" app2:layout_constraintStart_toStartOf="parent"
                    android:layout_marginLeft="12dp" android:layout_marginTop="8dp"
                    app2:layout_constraintTop_toTopOf="parent" app2:layout_constraintHorizontal_bias="1.0"
                    app2:layout_constraintVertical_bias="0.491"/>


        </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>